--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   <!-- Error overlay for runtime issues -->
   <script>
-    if (!window.__PAYEREDGE_V17__) {
+    if (!window.__PAYEREDGE_V15__) {
       (function(){
         function showErrorOverlay(err, where){
           const wrap = document.createElement('div');
@@ -149,24 +149,24 @@
   </script>
 
   <script>
-  if (window.__PAYEREDGE_V17__) {
+  if (window.__PAYEREDGE_V15__) {
     console.warn('PayerEdge script already loaded; skipping second init.');
   } else {
-    window.__PAYEREDGE_V17__ = true;
+    window.__PAYEREDGE_V15__ = true;
 
     /* ================== Config & utils ================== */
 
-    // CSV priority: newest v8 first, then v7 patched, then originals, both root and ./data/
+    // Tries both filenames in both locations. First one that loads wins.
     const CSV_CANDIDATES = [
-    './vsp_choice_master_v8.3.csv',
-    './vsp_choice_master_v8.2.csv',
-  ];
+  './vsp_choice_master_v8.3.csv',
+  './data/vsp_choice_master_v8.3.csv'
+];
 
-  const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
-  const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
-  const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer
+    const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
+    const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
+    const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer
 
-    // Optional safety net if some A-base is still missing from CSV (leave empty by default)
+    // Optional safety net if some A-base is still missing from CSV (leave empty now)
     const BASE_OVERRIDES = {
       // Example: NA: { copay: 175, chargeback: 95 }
     };
@@ -176,17 +176,10 @@
     const num = (v)=>{ const x=parseFloat(String(v??'').replace(/[^0-9.-]/g,'')); return isFinite(x)?x:0; };
     const quickHash=(s)=>{ let h=2166136261>>>0; for(let i=0;i<s.length;i++){ h^=s.charCodeAt(i); h=Math.imul(h,16777619)>>>0; } return ('00000000'+h.toString(16)).slice(-8); };
     const N = s => String(s||'').toLowerCase();
-    const codeOf = r => String(r?.code||'').trim().toUpperCase();
 
-    const isDCode  = r => /^d/i.test(codeOf(r));
-    const isPPhoto = r => /^p(m|r)/i.test(codeOf(r));
-
-    // === Glass detection: treat AF code as glass even if text doesn't say "glass"
-    const isGlassCode = r => /^AF$/i.test(codeOf(r));
-    const isGlassBase = row =>
-      isGlassCode(row) ||
-      /glass/i.test(N(row?.enhancement || row?.subtype || row?.notes || ''));
-
+    const isDCode  = r => /^d/i.test((r.code||'').trim());
+    const isPPhoto = r => /^p(m|r)/i.test((r.code||'').trim());
+    const isGlassBase = row => /glass/i.test(N(row?.enhancement || row?.subtype || ''));
     const preferPhotoCodeForBase = row => (isGlassBase(row) ? 'PM' : 'PR');
 
     const splitCodes = (s)=> String(s||'')
@@ -214,8 +207,8 @@
       });
     }
 
-    const CACHE_KEY='rev-vsp-choice-csv-v3';
-    const META_KEY='rev-vsp-choice-meta-v3';
+    const CACHE_KEY='rev-vsp-choice-csv-v1';
+    const META_KEY='rev-vsp-choice-meta-v1';
     const setCache=(t,m)=>{ localStorage.setItem(CACHE_KEY,t); localStorage.setItem(META_KEY,JSON.stringify(m)); };
     const getCache=()=>({ text: localStorage.getItem(CACHE_KEY), meta: JSON.parse(localStorage.getItem(META_KEY)||'{}') });
     const clearCacheStorage=()=>{ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); };
@@ -267,7 +260,7 @@
       }
 
       if (loaded){
-        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui17', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
+        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui15', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
         setCache(loaded.text, meta);
         DATA = parseCSV(loaded.text);
         buildSimpleIndex();
@@ -304,7 +297,7 @@
         <ul>${errs}</ul>
         <div style="margin-top:6px"><b>Fix it fast:</b>
           <ol>
-            <li>Place <code>vsp_choice_master_v8_full_composites_patched.csv</code> in the <i>same folder</i> as this HTML (or under <code>./data/</code>).</li>
+            <li>Place <code>vsp_choice_master_v7_full_fixed_patched.csv</code> in the <i>same folder</i> as this HTML (or under <code>./data/</code>).</li>
             <li>Open this page via a local server (not <code>file://</code>).</li>
             <li>Click <b>Clear Cache</b> then <b>Force Refresh</b>.</li>
           </ol>
@@ -317,16 +310,15 @@
       el('version').textContent = `plan=${meta.plan||'VSP_choice'} • rows=${count||0} • version=${meta.version||'—'} • source=${meta.source||'—'} • sha=${meta.sha||'—'}`;
     }
 
-    // === Stricter applies(): prevent MF from leaking into SV, etc.
+    const byKey=(k)=>DATA.filter(r=>(r.active||'yes').toLowerCase()==='yes' && (r.exclusive_key||'').toLowerCase()===k);
     function applies(row, fam){
       const a=(row.applies_to||'ALL').toUpperCase();
-      if (fam==='SV')     return a==='SV' || a==='ALL';
-      if (fam==='LINED')  return a==='OCC' || a==='ALL';
-      if (fam==='PAL')    return a==='MF' || a==='ALL';
-      return false;
+      if(a.includes('ALL')) return true;
+      if(fam==='SV')     return a.includes('SV');
+      if(fam==='LINED')  return a.includes('OCC');
+      if(fam==='PAL')    return a.includes('MF');
+      return true;
     }
-
-    const byKey=(k)=>DATA.filter(r=>(r.active||'yes').toLowerCase()==='yes' && (r.exclusive_key||'').toLowerCase()===k);
 
     /* ===== Per-line math (composites split into base A + add-on(s)) ===== */
     function line(row){
@@ -341,7 +333,7 @@
       }
 
       // Composite
-      const compositeCopayNums = parseCopayNumbers(row.copay); // e.g., [45,58]
+      const compositeCopayNums = parseCopayNumbers(row.copay); // e.g., [175,35] or [210]
       const compositeTotalCopay = num(row.copay);
       const compositeAddOnCB = num(row.chargeback);
 
@@ -527,7 +519,8 @@
       if (tintSel==='clear' || tintSel==='polarized') return null;
       const fam = el('lensFamily').value;
       const sunAll = byKey('sun_tech').filter(r=>applies(r,fam)).filter(r=>{
-        if(!el('includeGlass').checked && isGlassBase(r)) return false;
+        const n=N(r.enhancement);
+        if(!el('includeGlass').checked && n.includes('glass')) return false;
         return true;
       });
 
@@ -559,7 +552,8 @@
       const tintSel = el('lensTint').value;
 
       const sunAll = byKey('sun_tech').filter(r=>applies(r,fam)).filter(r=>{
-        if(!wantGlass && isGlassBase(r)) return false;
+        const n=N(r.enhancement);
+        if(!wantGlass && n.includes('glass')) return false;
         return true;
       });
 
@@ -571,8 +565,8 @@
       if (fam === 'PAL') {
         base = byKey('progressive_level').filter(r=>applies(r,fam)).filter(r=>{
           const name=N(r.enhancement);
-          if(!wantGlass && isGlassBase(r)) return false;
           if(!wantAsp && name.includes('aspheric')) return false;
+          if(!wantGlass && name.includes('glass'))  return false;
           if(isCustomMeasure(r)) return false;
           if (tintSel==='polarized') return /polariz/.test(name); // polarized as material
           return !/(photochrom|polariz|tint|tinted|sunglass|gradient)/.test(name);
@@ -584,8 +578,8 @@
           const pool = (fam==='SV' ? byKey('base_material') : byKey('occupational'));
           base = pool.filter(r=>applies(r,fam)).filter(r=>{
             const name=N(r.enhancement);
-            if(!wantGlass && isGlassBase(r)) return false;  // <= blocks AF unless checkbox on
             if(!wantAsp && name.includes('aspheric')) return false;
+            if(!wantGlass && name.includes('glass'))  return false;
             if(/photochrom|polariz|tint|tinted|sunglass|gradient/.test(name)) return false;
             return true;
           });
