--- a/payeredge.html
+++ b/payeredge.html
@@ -158,11 +158,9 @@
 
     // Tries both filenames in both locations. First one that loads wins.
     const CSV_CANDIDATES = [
-      './vsp_choice_master_v7_full_fixed_patched.csv',
-      './vsp_choice_master_v7_full_fixed.csv',
-      './data/vsp_choice_master_v7_full_fixed_patched.csv',
-      './data/vsp_choice_master_v7_full_fixed.csv'
-    ];
+  './vsp_choice_master_v8.3.csv',
+  './data/vsp_choice_master_v8.3.csv'
+];
 
     const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
     const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
